--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     
     "markdownlint.config": {
       "MD033": {
-        "allowed_elements": ["details","summary","b","i","li"," br"]
+        "allowed_elements": ["details","summary","b","i","li","br","dl","dt","dd","em","h1","h2","h3","h4","h5","h6"]
       }
     }
 }
