--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     
     
     "markdownlint.config": {
+      "MD024": true,
       "MD033": {
         "allowed_elements": ["details","summary","b","i","li","br","dl","dt","dd","em","h1","h2","h3","h4","h5","h6"]
       }
