--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
     "git.allowNoVerifyCommit": true,
     "markdownlint.config": {
       "MD024": {"siblings_only":true},
-      "MD033": {"allowed_elements": ["details","summary","b","i","li","br","dl","dt","dd","em","h1","h2","h3","h4","h5","h6"]}
+      "MD033": {"allowed_elements": ["é","è","ô","î","details","summary","b","i","li","br","dl","dt","dd","em","h1","h2","h3","h4","h5","h6"]}
   }
 }
