--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
         "allowed_elements": ["é","è","ô","î","details","summary","b","i","li","br","dl","dt","dd","em","h1","h2","h3","h4","h5","h6"]},
       "MD041": false,
       "MD042": false
+      },
+      "workbench.editorAssociations": {
+        "*.md": "default",
+        "*.markdown": "default"
       }
 }
