update.vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
       "MD001": false,
       "MD024": true,
       "MD033": {
-        "allowed_elements": ["é","è","ô","î","details","summary","b","i","li","br","dl","dt","dd","em","h1","h2","h3","h4","h5","h6"]},
+        "allowed_elements": ["mark","é","è","ô","î","details","summary","b","i","li","br","dl","dt","dd","em","h1","h2","h3","h4","h5","h6"]},
       "MD041": false,
       "MD042": false
       },
